180. Se toma en TankPlayerController_BP la referencia al AimingComponent del Tank, el cual se pasa al PlayerUI_BP, para poder definir el color del Crosshair

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,13 +86,14 @@ Advanced=False
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.16-18.44.33
+BattleTank.TimeStamp=2019.11.16-19.23.07
 BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -151,8 +152,9 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/PlayerUI
+MRUItem0=/Game/TankPlayerController_BP
+MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem2=/Game/PlayerUI
 
 [DetailCategories]
 PlayerUI_C.Appearance=True
@@ -415,6 +417,22 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+TankPlayerController_BP_C.TankPlayerController=True
+TankPlayerController_BP_C.Tick=True
+TankPlayerController_BP_C.PlayerController=True
+TankPlayerController_BP_C.Cheat Manager=True
+TankPlayerController_BP_C.MouseInterface=True
+TankPlayerController_BP_C.Game=True
+TankPlayerController_BP_C.Controller=True
+TankPlayerController_BP_C.Replication=True
+TankPlayerController_BP_C.Input=True
+TankPlayerController_BP_C.Actor=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+WidgetBlueprint.ClassOptions=True
+WidgetBlueprint.Interfaces=True
+WidgetBlueprint.BlueprintOptions=True
+WidgetBlueprint.Packaging=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
