182. se modifica la protencion de apuntadores, de if(!(Condicion)){return;} a if(!ensure(condicion)){return;} - debido a que ensure imprime detalles en el log que ayudara a identificar los problemas

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,12 +83,13 @@ Advanced=False
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.16-20.10.43
-BattleTank.LastCompileMethod=Unknown
+BattleTank.TimeStamp=2019.11.16-21.10.39
+BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
+OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -316,6 +317,16 @@ PlayerUI_C.Accessibility=True
 PlayerUI_C.Clipping=True
 PlayerUI_C.Navigation=True
 PlayerUI_C.Localization=True
+TankPlayerController_BP_C.TankPlayerController=True
+TankPlayerController_BP_C.Tick=True
+TankPlayerController_BP_C.PlayerController=True
+TankPlayerController_BP_C.Cheat Manager=True
+TankPlayerController_BP_C.MouseInterface=True
+TankPlayerController_BP_C.Game=True
+TankPlayerController_BP_C.Controller=True
+TankPlayerController_BP_C.Replication=True
+TankPlayerController_BP_C.Input=True
+TankPlayerController_BP_C.Actor=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -374,6 +385,7 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerUI
+MRUItem0=/Game/TankPlayerController_BP
+MRUItem1=/Game/PlayerUI
 
 
