186. - En Tank: se elimina todo lo relacionado al componente AimingComponent se elimina metodo AimAt() se copia en AimingComponent se copia variable LaunchSpeed en AimingComponent - En TankAimingComponent: como ahora tiene LaunchSpeed local se elimina de la declaracion del metodo - En TankPlayerController: en el metodo GetControlledTank() se elimina cast<ATank> porque ya sabemos que es un Pawn. En el metodo AimTowardsCrosshair() se elimina referencia al tanque, y se cambia por una referencia a su componente Aiming. Luego al realizar RayCast y conseguir una intercepcion se llama directamente al metodo AimAt() del AimingComponent - En TankAIController: se elimina toda dependencia a Tank. En el metodo Tick() se referencia al Pawn(Tank) controlado por AI y el PlayerTank

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,8 +59,8 @@ ClientWindowHeight=480
 ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
+MultipleInstanceLastHeight=0
+MultipleInstanceLastWidth=0
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-KHEA3GT
 LastExecutedLaunchName=DESKTOP-KHEA3GT
 LastExecutedPIEPreviewDevice=
@@ -71,10 +71,13 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.17-18.10.16
+BattleTank.TimeStamp=2019.11.17-20.25.56
 BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
 
 
