--- a/BattleTank/Saved/Config/Windows/Engine.ini
+++ b/BattleTank/Saved/Config/Windows/Engine.ini
@@ -19,12 +19,12 @@ ANTPath=(Path="")
 JavaPath=(Path="")
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
