189. - En TankAimingComponent   se termina de agregar la logica para cambiar el color del Crosshair dependiendo del estado   en el metodo Tick() - Se crea metodo IsBarrelMoving()    donde se compara el Vector Forward del Barrel y el vector de adonde apunta el crosshair

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.17-22.15.51
+BattleTank.TimeStamp=2019.11.17-22.38.06
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -753,12 +753,14 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
+MRUItem0=/Game/PlayerUI
+MRUItem1=/Game/ImprovedTank/Tank_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1037,6 +1039,34 @@ LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+TankTrack.Variable=True
+TankTrack.TransformCommon=True
+TankTrack.Sockets=True
+TankTrack.StaticMesh=True
+TankTrack.Materials=True
+TankTrack.TankTrack=True
+TankTrack.Physics=True
+TankTrack.Collision=True
+TankTrack.Lighting=True
+TankTrack.Rendering=True
+TankTrack.VirtualTexture=True
+TankTrack.Tags=True
+TankTrack.ComponentReplication=True
+TankTrack.Cooking=True
+TankTrack.Events=True
+PlayerUI_C.Appearance=True
+PlayerUI_C.Designer=True
+PlayerUI_C.Input=True
+PlayerUI_C.Interaction=True
+PlayerUI_C.Performance=True
+PlayerUI_C.Layout=True
+PlayerUI_C.Behavior=True
+PlayerUI_C.Render Transform=True
+PlayerUI_C.Accessibility=True
+PlayerUI_C.Clipping=True
+PlayerUI_C.Navigation=True
+PlayerUI_C.Localization=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1156,5 +1186,73 @@ Project=C:/Program Files/Epic Games/UE_4.23/
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
 
