190. - En TankTrack   se le crea un Constructor, BeginPlay y TickComponent   se calcula en Tick() la fuerza a aplicar   para contrarestar la velocidad de deslizamiento lateral del tanque

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.17-22.38.06
+BattleTank.TimeStamp=2019.11.18-00.02.24
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -753,14 +753,14 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerUI
-MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem0=/Game/ImprovedTank/Tank_BP
+MRUItem1=/Game/TankPlayerController_BP
+MRUItem2=/Game/PlayerUI
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1067,6 +1067,19 @@ PlayerUI_C.Clipping=True
 PlayerUI_C.Navigation=True
 PlayerUI_C.Localization=True
 K2Node_VariableGet.DefaultValueCategory=True
+TankPlayerController_BP_C.TankPlayerController=True
+TankPlayerController_BP_C.Tick=True
+TankPlayerController_BP_C.PlayerController=True
+TankPlayerController_BP_C.Cheat Manager=True
+TankPlayerController_BP_C.MouseInterface=True
+TankPlayerController_BP_C.Game=True
+TankPlayerController_BP_C.Controller=True
+TankPlayerController_BP_C.Replication=True
+TankPlayerController_BP_C.Input=True
+TankPlayerController_BP_C.Actor=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1254,5 +1267,9 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[AssetEditorToolkitTabLocation]
+/Game/TankPlayerController_BP.TankPlayerController_BP=0
+/Game/PlayerUI.PlayerUI=0
 
 
