192. - En Tank_BP - Physics - Linear Damping   se aplica fuerza que trabaja en contra del movimiento lineal
- Angular Damping
  evita que gires a lo loco (mejor descripcion imposible)

- Toda la logica de aplicar fuerza contra deslizamiento
 que se encuentra en Tick, debe ser movida al nuevo metodo OnHit()
 para que solo sea aplicada cuando se toque suelo
 al mover sta logica fuera de Tick se puede desactivar Tick en el Constructor

- En TankTrack
  se extrae el codigo, se hace Clamp al Throttle entre -1 y 1 y se ejecuta en el metodo OnHit()

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.23-22.10.32
+BattleTank.TimeStamp=2019.11.24-00.53.14
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -755,7 +755,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ImprovedTank/Tank_BP
@@ -1231,6 +1231,29 @@ AutomationTestSettings.ExternalTools=True
 AutomationTestSettings.Screenshots=True
 CrashReporterSettings.CrashReporter=True
 LogVisualizerSettings.VisualLogger=True
+Tank_BP_C.TransformCommon=True
+Tank_BP_C.Collision=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+TankBarrel.Variable=True
+TankBarrel.TransformCommon=True
+TankBarrel.Sockets=True
+TankBarrel.StaticMesh=True
+TankBarrel.Materials=True
+TankBarrel.Setup=True
+TankBarrel.Physics=True
+TankBarrel.Collision=True
+TankBarrel.Lighting=True
+TankBarrel.Rendering=True
+TankBarrel.VirtualTexture=True
+TankBarrel.Tags=True
+TankBarrel.ComponentReplication=True
+TankBarrel.Cooking=True
+TankBarrel.Events=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1426,5 +1449,8 @@ FrameNumberDisplayFormat=Seconds
 [AssetEditorToolkitTabLocation]
 /Game/TankPlayerController_BP.TankPlayerController_BP=0
 /Game/PlayerUI.PlayerUI=0
+
+[PlacementMode]
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
 
