194. la AI ahora solo dispara cuando Locked y no se acerca tanto al jugador

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.24-18.45.02
+BattleTank.TimeStamp=2019.11.24-21.45.40
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -753,14 +753,17 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/ImprovedTank/TankAIController_BP.TankAIController_BP
 
 [MessageLog]
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/TankPlayerController_BP
-MRUItem2=/Game/PlayerUI
+MRUItem0=/Game/ImprovedTank/TankAIController_BP
+MRUItem1=/Game/TankAIController_BP
+MRUItem2=/Game/ImprovedTank/Tank_BP
+MRUItem3=/Game/TankPlayerController_BP
+MRUItem4=/Game/PlayerUI
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1254,6 +1257,66 @@ TankBarrel.Tags=True
 TankBarrel.ComponentReplication=True
 TankBarrel.Cooking=True
 TankBarrel.Events=True
+TankAIController_BP_C.Tick=True
+TankAIController_BP_C.AI=True
+TankAIController_BP_C.Controller=False
+TankAIController_BP_C.Replication=False
+TankAIController_BP_C.Input=True
+TankAIController_BP_C.Actor=True
+TankAIController_BP_C.Variable=True
+TankAIController_BP_C.Sockets=True
+TankAIController_BP_C.Tags=True
+TankAIController_BP_C.ComponentReplication=True
+TankAIController_BP_C.Activation=True
+TankAIController_BP_C.Cooking=True
+TankAIController_BP_C.Events=True
+TankAIController_BP_C.ComponentTick=True
+REINST_TankAIController_BP_C_53.Tick=True
+REINST_TankAIController_BP_C_53.AI=True
+REINST_TankAIController_BP_C_53.Controller=True
+REINST_TankAIController_BP_C_53.Rendering=True
+REINST_TankAIController_BP_C_53.Replication=True
+REINST_TankAIController_BP_C_53.Input=True
+REINST_TankAIController_BP_C_53.Actor=True
+TankAIController_BP_C.Setup=True
+REINST_TankAIController_BP_C_57.Tick=True
+REINST_TankAIController_BP_C_57.Setup=True
+REINST_TankAIController_BP_C_57.AI=True
+REINST_TankAIController_BP_C_57.Controller=True
+REINST_TankAIController_BP_C_57.Rendering=True
+REINST_TankAIController_BP_C_57.Replication=True
+REINST_TankAIController_BP_C_57.Input=True
+REINST_TankAIController_BP_C_57.Actor=True
+REINST_TankAIController_BP_C_61.Tick=True
+REINST_TankAIController_BP_C_61.Setup=True
+REINST_TankAIController_BP_C_61.AI=True
+REINST_TankAIController_BP_C_61.Controller=True
+REINST_TankAIController_BP_C_61.Rendering=True
+REINST_TankAIController_BP_C_61.Replication=True
+REINST_TankAIController_BP_C_61.Input=True
+REINST_TankAIController_BP_C_61.Actor=True
+TankAIController.TransformCommon=True
+TankAIController.Setup=True
+TankAIController.AI=True
+TankAIController.Replication=True
+TankAIController.Input=True
+TankAIController.Actor=True
+REINST_TankAIController_BP_C_65.Tick=True
+REINST_TankAIController_BP_C_65.Setup=True
+REINST_TankAIController_BP_C_65.AI=True
+REINST_TankAIController_BP_C_65.Controller=True
+REINST_TankAIController_BP_C_65.Rendering=True
+REINST_TankAIController_BP_C_65.Replication=True
+REINST_TankAIController_BP_C_65.Input=True
+REINST_TankAIController_BP_C_65.Actor=True
+REINST_TankAIController_BP_C_73.Tick=True
+REINST_TankAIController_BP_C_73.Setup=True
+REINST_TankAIController_BP_C_73.AI=True
+REINST_TankAIController_BP_C_73.Controller=True
+REINST_TankAIController_BP_C_73.Rendering=True
+REINST_TankAIController_BP_C_73.Replication=True
+REINST_TankAIController_BP_C_73.Input=True
+REINST_TankAIController_BP_C_73.Actor=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1449,6 +1512,7 @@ FrameNumberDisplayFormat=Seconds
 [AssetEditorToolkitTabLocation]
 /Game/TankPlayerController_BP.TankPlayerController_BP=0
 /Game/PlayerUI.PlayerUI=0
+/Game/ImprovedTank/TankAIController_BP.TankAIController_BP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
