196. - Se arregla bug al apuntar en direccion -X, donde el turret giraba en dierccion (camino mas largo) - Se crea nuevo Pawn(Actor) Mortar, se crea su blueprint, sus staic meshes, se crean respectivos sockets, se asigna un Aiming Component, etc. reutilizando las clases ya creadas para Tank

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.07-16.48.10
+BattleTank.TimeStamp=2019.12.07-17.47.55
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -754,18 +754,23 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
+OpenAssetsAtExit=/Game/Mortar/mortar_barrel.mortar_barrel
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/Mortar/Mortar_BP.Mortar_BP
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/PlayerUI
-MRUItem2=/Game/ImprovedTank/TankAIController_BP
-MRUItem3=/Game/TankAIController_BP
-MRUItem4=/Game/TankPlayerController_BP
+MRUItem0=/Game/Mortar/mortar_barrel
+MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem2=/Game/Mortar/mortar_dome
+MRUItem3=/Game/Mortar/mortar_body
+MRUItem4=/Game/Mortar/Mortar_BP
+MRUItem5=/Game/PlayerUI
+MRUItem6=/Game/ImprovedTank/TankAIController_BP
+MRUItem7=/Game/TankAIController_BP
+MRUItem8=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1342,6 +1347,49 @@ K2Node_FunctionResult.Outputs=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+Mortar_BP_C.Tick=True
+Mortar_BP_C.Pawn=True
+Mortar_BP_C.Camera=True
+Mortar_BP_C.Rendering=True
+Mortar_BP_C.Replication=True
+Mortar_BP_C.Input=True
+Mortar_BP_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+TankTurret.Variable=True
+TankTurret.TransformCommon=True
+TankTurret.Sockets=True
+TankTurret.StaticMesh=True
+TankTurret.Setup=True
+TankTurret.Physics=True
+TankTurret.Collision=True
+TankTurret.Lighting=True
+TankTurret.Rendering=True
+TankTurret.VirtualTexture=True
+TankTurret.Tags=True
+TankTurret.ComponentReplication=True
+TankTurret.Cooking=True
+TankTurret.Events=True
+TankTurret.Materials=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
+Mortar_BP_C.TransformCommon=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1544,8 +1592,12 @@ FrameNumberDisplayFormat=Seconds
 /Game/TankPlayerController_BP.TankPlayerController_BP=0
 /Game/PlayerUI.PlayerUI=0
 /Game/ImprovedTank/TankAIController_BP.TankAIController_BP=0
+/Game/Mortar/mortar_dome.mortar_dome=0
+/Game/Mortar/mortar_body.mortar_body=0
+/Game/ImprovedTank/Tank_BP.Tank_BP=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mortar/Mortar_BP.Mortar_BP;
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
 [DetailCustomWidgetExpansion]
@@ -1613,5 +1665,92 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
