198. Se elimina la carpeta StarterContent, lo que exige usar Reference Viewer para copiar a carpetas del proyecto los archivos referenciados, fix references, para poder eliminar finalmente la carpeta y modificar el gitignore

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -754,7 +754,7 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Mortar/mortar_barrel.mortar_barrel
+OpenAssetsAtExit=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 OpenAssetsAtExit=/Game/Mortar/Mortar_BP.Mortar_BP
 
@@ -762,15 +762,20 @@ OpenAssetsAtExit=/Game/Mortar/Mortar_BP.Mortar_BP
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mortar/mortar_barrel
-MRUItem1=/Game/ImprovedTank/Tank_BP
-MRUItem2=/Game/Mortar/mortar_dome
-MRUItem3=/Game/Mortar/mortar_body
-MRUItem4=/Game/Mortar/Mortar_BP
-MRUItem5=/Game/PlayerUI
-MRUItem6=/Game/ImprovedTank/TankAIController_BP
-MRUItem7=/Game/TankAIController_BP
-MRUItem8=/Game/TankPlayerController_BP
+MRUItem0=/Game/FlatLand
+MRUItem1=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem2=/Game/ImprovedMortar/mortar_barrel
+MRUItem3=/Game/ImprovedMortar/mortar_dome
+MRUItem4=/Game/ImprovedMortar/mortar_body
+MRUItem5=/Game/Mortar/mortar_barrel
+MRUItem6=/Game/ImprovedTank/Tank_BP
+MRUItem7=/Game/Mortar/mortar_dome
+MRUItem8=/Game/Mortar/mortar_body
+MRUItem9=/Game/Mortar/Mortar_BP
+MRUItem10=/Game/PlayerUI
+MRUItem11=/Game/ImprovedTank/TankAIController_BP
+MRUItem12=/Game/TankAIController_BP
+MRUItem13=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1390,6 +1395,28 @@ StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
 StaticMeshSocket.StaticMeshSocket=True
 Mortar_BP_C.TransformCommon=True
+improvedMortar_BP_C.Tick=True
+improvedMortar_BP_C.Pawn=True
+improvedMortar_BP_C.Camera=True
+improvedMortar_BP_C.Rendering=True
+improvedMortar_BP_C.Replication=True
+improvedMortar_BP_C.Input=True
+improvedMortar_BP_C.Actor=True
+improvedMortar_BP_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1595,8 +1622,14 @@ FrameNumberDisplayFormat=Seconds
 /Game/Mortar/mortar_dome.mortar_dome=0
 /Game/Mortar/mortar_body.mortar_body=0
 /Game/ImprovedTank/Tank_BP.Tank_BP=0
+/Game/ImprovedMortar/mortar_dome.mortar_dome=0
+/Game/ImprovedMortar/mortar_body.mortar_body=0
+/Game/Mortar/mortar_barrel.mortar_barrel=0
+/Game/ImprovedMortar/mortar_barrel.mortar_barrel=0
+/Game/FlatLand.FlatLand=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP;
 RecentlyPlaced=/Game/Mortar/Mortar_BP.Mortar_BP;
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
@@ -1665,6 +1698,10 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1752,5 +1789,46 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
