199. Se crean las bases para agregar efectos de particulas al projectil

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,8 +71,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.07-17.47.55
-BattleTank.LastCompileMethod=Runtime
+BattleTank.TimeStamp=2019.12.07-20.52.34
+BattleTank.LastCompileMethod=External
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.10.27-04.30.03
@@ -754,28 +754,28 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP
+OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/Mortar/Mortar_BP.Mortar_BP
 
 [MessageLog]
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FlatLand
-MRUItem1=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem2=/Game/ImprovedMortar/mortar_barrel
-MRUItem3=/Game/ImprovedMortar/mortar_dome
-MRUItem4=/Game/ImprovedMortar/mortar_body
-MRUItem5=/Game/Mortar/mortar_barrel
-MRUItem6=/Game/ImprovedTank/Tank_BP
-MRUItem7=/Game/Mortar/mortar_dome
-MRUItem8=/Game/Mortar/mortar_body
-MRUItem9=/Game/Mortar/Mortar_BP
-MRUItem10=/Game/PlayerUI
-MRUItem11=/Game/ImprovedTank/TankAIController_BP
-MRUItem12=/Game/TankAIController_BP
-MRUItem13=/Game/TankPlayerController_BP
+MRUItem0=/Game/ImprovedTank/Tank_BP
+MRUItem1=/Game/Projectile/Projectile_BP
+MRUItem2=/Game/PlayerUI
+MRUItem3=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem4=/Game/Mortar/Mortar_BP
+MRUItem5=/Game/FlatLand
+MRUItem6=/Game/ImprovedMortar/mortar_barrel
+MRUItem7=/Game/ImprovedMortar/mortar_dome
+MRUItem8=/Game/ImprovedMortar/mortar_body
+MRUItem9=/Game/Mortar/mortar_barrel
+MRUItem10=/Game/Mortar/mortar_dome
+MRUItem11=/Game/Mortar/mortar_body
+MRUItem12=/Game/ImprovedTank/TankAIController_BP
+MRUItem13=/Game/TankAIController_BP
+MRUItem14=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1417,6 +1417,76 @@ PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Projectile_BP_C.Tick=True
+Projectile_BP_C.Rendering=True
+Projectile_BP_C.Replication=True
+Projectile_BP_C.Input=True
+Projectile_BP_C.Actor=True
+Projectile_BP_C.Variable=True
+Projectile_BP_C.TransformCommon=True
+Projectile_BP_C.Sockets=True
+Projectile_BP_C.StaticMesh=True
+Projectile_BP_C.Physics=True
+Projectile_BP_C.Collision=True
+Projectile_BP_C.Lighting=True
+Projectile_BP_C.VirtualTexture=True
+Projectile_BP_C.Tags=True
+Projectile_BP_C.ComponentReplication=True
+Projectile_BP_C.Cooking=True
+Projectile_BP_C.Events=True
+Projectile_BP_C.Materials=True
+REINST_Projectile_BP_C_38.Variable=True
+REINST_Projectile_BP_C_38.TransformCommon=True
+REINST_Projectile_BP_C_38.Sockets=True
+REINST_Projectile_BP_C_38.StaticMesh=True
+REINST_Projectile_BP_C_38.Materials=True
+REINST_Projectile_BP_C_38.Physics=True
+REINST_Projectile_BP_C_38.Collision=True
+REINST_Projectile_BP_C_38.Lighting=True
+REINST_Projectile_BP_C_38.Rendering=True
+REINST_Projectile_BP_C_38.VirtualTexture=True
+REINST_Projectile_BP_C_38.Tags=True
+REINST_Projectile_BP_C_38.ComponentReplication=True
+REINST_Projectile_BP_C_38.Cooking=True
+REINST_Projectile_BP_C_38.Events=True
+REINST_Projectile_BP_C_42.Variable=True
+REINST_Projectile_BP_C_42.TransformCommon=True
+REINST_Projectile_BP_C_42.Sockets=True
+REINST_Projectile_BP_C_42.StaticMesh=True
+REINST_Projectile_BP_C_42.Materials=True
+REINST_Projectile_BP_C_42.Physics=True
+REINST_Projectile_BP_C_42.Collision=True
+REINST_Projectile_BP_C_42.Lighting=True
+REINST_Projectile_BP_C_42.Rendering=True
+REINST_Projectile_BP_C_42.VirtualTexture=True
+REINST_Projectile_BP_C_42.Tags=True
+REINST_Projectile_BP_C_42.ComponentReplication=True
+REINST_Projectile_BP_C_42.Cooking=True
+REINST_Projectile_BP_C_42.Events=True
+REINST_Projectile_BP_C_46.Variable=True
+REINST_Projectile_BP_C_46.TransformCommon=True
+REINST_Projectile_BP_C_46.Sockets=True
+REINST_Projectile_BP_C_46.StaticMesh=True
+REINST_Projectile_BP_C_46.Materials=True
+REINST_Projectile_BP_C_46.Physics=True
+REINST_Projectile_BP_C_46.Collision=True
+REINST_Projectile_BP_C_46.Lighting=True
+REINST_Projectile_BP_C_46.Rendering=True
+REINST_Projectile_BP_C_46.VirtualTexture=True
+REINST_Projectile_BP_C_46.Tags=True
+REINST_Projectile_BP_C_46.ComponentReplication=True
+REINST_Projectile_BP_C_46.Cooking=True
+REINST_Projectile_BP_C_46.Events=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1627,6 +1697,8 @@ FrameNumberDisplayFormat=Seconds
 /Game/Mortar/mortar_barrel.mortar_barrel=0
 /Game/ImprovedMortar/mortar_barrel.mortar_barrel=0
 /Game/FlatLand.FlatLand=0
+/Game/Mortar/Mortar_BP.Mortar_BP=0
+/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP;
