--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -751,31 +751,41 @@ MovieSceneCapture.TimeStamp=2019.10.27-04.28.46
 MovieSceneCapture.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2019.10.27-04.30.03
 SequencerWidgets.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2019.10.27-04.28.35
+MeshBuilder.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.10.27-04.27.47
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+Cascade.TimeStamp=2019.10.27-04.25.34
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2019.10.27-04.26.26
+DistCurveEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/StarterContent/Particles/P_Explosion.P_Explosion
 
 [MessageLog]
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/Projectile/Projectile_BP
-MRUItem2=/Game/PlayerUI
-MRUItem3=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem4=/Game/Mortar/Mortar_BP
-MRUItem5=/Game/FlatLand
-MRUItem6=/Game/ImprovedMortar/mortar_barrel
-MRUItem7=/Game/ImprovedMortar/mortar_dome
-MRUItem8=/Game/ImprovedMortar/mortar_body
-MRUItem9=/Game/Mortar/mortar_barrel
-MRUItem10=/Game/Mortar/mortar_dome
-MRUItem11=/Game/Mortar/mortar_body
-MRUItem12=/Game/ImprovedTank/TankAIController_BP
-MRUItem13=/Game/TankAIController_BP
-MRUItem14=/Game/TankPlayerController_BP
+MRUItem0=/Game/Projectile/Projectile_BP
+MRUItem1=/Game/StarterContent/Particles/P_Explosion
+MRUItem2=/Game/ImprovedTank/Tank_BP
+MRUItem3=/Game/PlayerUI
+MRUItem4=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem5=/Game/Mortar/Mortar_BP
+MRUItem6=/Game/FlatLand
+MRUItem7=/Game/ImprovedMortar/mortar_barrel
+MRUItem8=/Game/ImprovedMortar/mortar_dome
+MRUItem9=/Game/ImprovedMortar/mortar_body
+MRUItem10=/Game/Mortar/mortar_barrel
+MRUItem11=/Game/Mortar/mortar_dome
+MRUItem12=/Game/Mortar/mortar_body
+MRUItem13=/Game/ImprovedTank/TankAIController_BP
+MRUItem14=/Game/TankAIController_BP
+MRUItem15=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1487,6 +1497,42 @@ REINST_Projectile_BP_C_46.Tags=True
 REINST_Projectile_BP_C_46.ComponentReplication=True
 REINST_Projectile_BP_C_46.Cooking=True
 REINST_Projectile_BP_C_46.Events=True
+Projectile_BP_C.Particles=True
+Projectile_BP_C.EmitterActions=True
+Projectile_BP_C.ComponentTick=True
+Projectile_BP_C.LOD=True
+Projectile_BP_C.Attachment=True
+Projectile_BP_C.Activation=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1576,7 +1622,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Particles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1609,13 +1655,22 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -1699,6 +1754,7 @@ FrameNumberDisplayFormat=Seconds
 /Game/FlatLand.FlatLand=0
 /Game/Mortar/Mortar_BP.Mortar_BP=0
 /Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP=0
+/Game/StarterContent/Particles/P_Explosion.P_Explosion=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP;
@@ -1770,6 +1826,7 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1902,5 +1959,41 @@ bPlatformUsed[32]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[DetailCategoriesAdvanced]
+ParticleSpriteEmitter.Particle=True
 
 
